# fastq_generator

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  backup.toml  cargo.toml  deny.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  lint.yml  post-release.yml  release-notes.py  release.yml
src/: bin.rs  fastq_generator.rs
