[package]
name = "fastq-generator"
version = "0.1.1"
edition = "2021"
authors = [
	"Michael Best <michaelbest55@gmail.com>",
]
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
description = "A fastq generator for generation of synthetic fastq files."
repository = "https://github.com/michaelbest55/fastq-generator"
documentation = "https://docs.rs/fastq-generator/"
keywords = ["bioinformatics", "fastq"]
categories = ["command-line-utilities", "science"]
license = "MIT"
readme = "README.md"

[badges]
is-it-maintained-issue-resolution = { repository = "michaelbest55/fastq-generator" }
is-it-maintained-open-issues = { repository = "michaelbest55/fastq-generator" }

maintenance = {status = "actively-developed"}

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
rand = { version = "0.9", features = ["std"] }
tempfile = "3.8"

[build-dependencies]
clap = { version = "4.5", features = ["cargo"] }

[features]
default     = ["std"]
std         = [] # support for no_std in a backwards-compatible way
debug       = [] # Enables debug messages
doc         = [] # All the features which add to documentation

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
opt-level = 3

[package.metadata.docs.rs]
features = ["doc"]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "fastq_generator"
path = "src/bin.rs"

[lib]
name = "fastq_generator"
path = "src/fastq_generator.rs"

[workspace.metadata.cargo-clippy]
args = ["--all-targets", "--", "-D", "warnings", "-A", "deprecated"]